WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172725
Dictionary lookup disappears after a few seconds on observer.com
https://bugs.webkit.org/show_bug.cgi?id=172725
Summary
Dictionary lookup disappears after a few seconds on observer.com
Tim Horton
Reported
2017-05-30 12:41:55 PDT
Dictionary lookup disappears after a few seconds on observer.com
Attachments
Patch
(3.00 KB, patch)
2017-05-30 12:42 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.37 KB, patch)
2017-05-30 12:48 PDT
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-05-30 12:42:13 PDT
Created
attachment 311530
[details]
Patch
Tim Horton
Comment 2
2017-05-30 12:48:58 PDT
Created
attachment 311531
[details]
Patch
Tim Horton
Comment 3
2017-05-30 12:50:49 PDT
The /ideal/ fix would involve tracking what frame each content-relative subwindow originated from, and dismissing it if that frame navigates, but that is a lot of bookkeeping for little value, when this fixes what is likely the most common case.
Tim Horton
Comment 4
2017-05-30 12:57:32 PDT
http://trac.webkit.org/changeset/217566/webkit
Radar WebKit Bug Importer
Comment 5
2017-05-30 20:17:24 PDT
<
rdar://problem/32479621
>
Alexey Proskuryakov
Comment 6
2017-05-31 22:24:29 PDT
Shouldn't this be using the same code path as resetting input method state on navigation? See also:
rdar://problem/13875766
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug